# solar-sim

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ems-model/: Cargo.toml  README.md
ems-model/bindings/: factory.ts  line.ts  machine.ts  worker.ts
ems-model/src/: lib.rs
ems-model/src/building/: electricity.rs  insulation.rs  mod.rs
ems-model/src/factory/: line.rs  machine.rs  mod.rs  worker.rs
ems-model/src/general/: location.rs
solar-system-opt/: .gitignore  Cargo.toml  README.md
solar-system-opt/data/: demand.csv  ts_res.csv
solar-system-opt/src/: lib.rs  main.rs
solar-system-opt/src/general/: electricity_demand.rs  finance.rs  mod.rs
solar-system-opt/src/simple/: mod.rs  plot.rs  simple_opt_re.rs  solar_system.rs  solar_system_utils.rs
